--- a/Groovy学习/语法规范/面向对象.md
+++ b/Groovy学习/语法规范/面向对象.md
@@ -1146,6 +1146,8 @@ Groovy提供了`Target`注解用来指定注解的作用域:
 
 
 ## 2.10 多重继承冲突
+### 2.10.1 默认的冲突解决方案
+
 **类可以实现多个特质，如果多个特质之间存在某个签名相同的方法，那么就会导致冲突**
 
 	trait A {
@@ -1159,15 +1161,159 @@ Groovy提供了`Target`注解用来指定注解的作用域:
 	def c = new C()
 	assert c.exec() == 'B'
 	
-- 在这个例子中，默认是后定义的特质会覆盖前面的特质中具有相同签名的方法
+- **默认情况下，如果后定义的特质会覆盖前面的特质中的具有相同签名的方法**
 
-### 2.10.1 Default conflict resolution
-### 2.10.2 User conflict resolution
-## 2.11 Runtime implementation of traits
-### 2.11.1 Implementing a trait at runtime
-### 2.11.2 Implementing multiple traits at once
-## 2.12 Chaining behavior
-### 2.12.1 Semantics of super inside a trait
+### 2.10.2 自定义的冲突解决方案
+
+**冲突时除了使用默认的解决方案外，还可以通过使用`Trait.super.methodName`语法可以选择调用指定特质的方法**
+
+	class C implements A,B {
+	    String exec() { A.super.exec() }    
+	}
+	def c = new C()
+	assert c.exec() == 'A'    
+
+## 2.11 特质的运行时实现
+### 2.11.1 在运行时实现特质
+**Groovy支持在运行时动态实现特性,这允许在对已经存在对象进行装饰**. **Groovy提供了`as`关键字用来在运行时实现特质**
+
+	trait Extra {
+	    String extra() { "I'm an extra method" }            
+	}
+	class Something {                                       
+	    String doSomething() { 'Something' }                
+	}
+	// 在运行时为类Something 实现特质Extra
+	def s = new Something() as Extra                        
+	s.extra()                                               
+	s.doSomething()    
+
+- **使用关键字`as`实现了特质的对象前后不是同一个**
+	
+### 2.11.2 在运行时一次性实现多个特质
+
+**Groovy提供了`withTraits()`方法用来在运行时一次性实现多个特质**
+
+	trait A { void methodFromA() {} }
+	trait B { void methodFromB() {} }
+	
+	class C {}
+	
+	def c = new C()
+	try{
+	    c.methodFromA()                     
+	    c.methodFromB()   
+	}catch(e){
+	    println "$e"
+	}                  
+	def d = c.withTraits A, B           
+	d.methodFromA()                     
+	d.methodFromB()  
+	
+- **使用`withTraits()`方法强转前后的对象不是同一个**
+
+
+## 2.12 行为链(`Chaining behavior`)
+
+**Groovy支持可堆叠特质的概念。即如果当前特质不能处理消息，则将从一个特质委托给另一个特质处理**
+
+### 2.12.1 特质实现类中的`super`
+
+	interface MessageHandler {
+	    void on(String message, Map payload)
+	}
+
+	trait DefaultHandler implements MessageHandler {
+	    void on(String message, Map payload) {
+	        println "Received $message with payload $payload"
+	    }
+	}
+	
+	class SimpleHandler implements DefaultHandler {
+		void on(String message, Map payload){
+			println "SimpleHandler"
+			println "Received $message with payload $payload"
+		}
+	}
+	
+	def handler = new SimpleHandler()
+	handler.on("Test",[name:"jack",age:14])
+
+- **默认情况下重写`SimpleHandler `的`on()`方法会覆盖父特质的方法,但是通过`SuperClassName.super.methodnName()`的形式可以调用指定父类的某个方法**
+
+		class SimpleHandlerWithLogging implements DefaultHandler {
+		    void on(String message, Map payload) {                                  
+		        println "Seeing $message with payload $payload"
+		        // 调用父类的方法                     
+		        DefaultHandler.super.on(message, payload)                           
+		    }
+		}
+
+- 但是`SuperClassName.super.methodnName()`这种方式有缺陷:
+
+	1. 被绑定到了一个具体的处理器
+
+	2. 存在对父类方法的显式引用，这意味着如果更改了类对特质的实现，会导致错误
+
+### 2.12.2 行为链中的`super`
+
+**为了解决上述问题，可以通过`super.methodName()`形式将调用委托给行为链中的下一个特质**,**这种形式十分强大，因为它允许编写彼此不认识的处理程序，并且按照任意的顺序组合它们**
+
+	trait LoggingHandler implements MessageHandler {                            
+	    void on(String message, Map payload) {
+	        println "Seeing $message with payload $payload"                     
+	        super.on(message, payload)                                          
+	    }
+	}
+		
+	class HandlerWithLogger implements DefaultHandler, LoggingHandler {}
+	def loggingHandler = new HandlerWithLogger()
+	loggingHandler.on('test logging', [:])
+	// 输出结果
+	Seeing test logging with payload [:]
+	Received test logging with payload [:]	
+- **因为在声明特质的语句中，越靠后的特质优先级越高。**因此会先输出`LoggingHandler`，再输出`DefaultHandler`
+		
+
+如果这时候再添加一个特质,该特质仅处理特定信息,能够看到行为链的作用:
+	
+	trait SayHandler implements MessageHandler {
+	    void on(String message, Map payload) {
+	        if (message.startsWith("say")) {                                    
+	            println "I say ${message - 'say'}!"
+	        } else {
+	            super.on(message, payload)                                      
+	        }
+	    }
+	}
+
+	class Handler implements DefaultHandler, SayHandler, LoggingHandler {}
+	def h = new Handler()
+	h.on('foo', [:])
+	h.on('sayHello', [:])
+
+- 根据优先级，`LoggingHandler`会先进行处理，输出自身的日志后，调用其下一个特质`SayHandler`去处理. 在`SayHandler`中根据对参数的判断，执行不同的逻辑
+
+- 通过更改特质声明顺序，可以改变行为
+
+		class AlternateHandler implements DefaultHandler, LoggingHandler, SayHandler {}
+		h = new AlternateHandler()
+		h.on('foo', [:])
+		h.on('sayHello', [:])
+		// 输出内容
+		Seeing foo with payload [:]
+		Received foo with payload [:]
+		I say Hello!
+
+### 2.12.1 `super`在特质中的语义
+
+如果一个类实现了若干特质，并且每个特质中都使用了未限定的`super`调用
+
+1. **如果在行为链中，拥有下一个特质，那么就会调用下一个特质的方法**
+
+2. **如果在行为链中，当前特质已经是最后一个，那么这时`super`就代表`this`**
+
+
 ## 2.13 Advanced features
 ### 2.13.1 SAM type coercion
 ### 2.13.2 Differences with Java 8 default methods
