--- a/Groovy学习/语法规范/面向对象.md
+++ b/Groovy学习/语法规范/面向对象.md
@@ -1217,7 +1217,7 @@ Groovy提供了`Target`注解用来指定注解的作用域:
 
 **Groovy支持可堆叠特质的概念。即如果当前特质不能处理消息，则将从一个特质委托给另一个特质处理**
 
-### 2.12.1 特质实现类中的`super`
+### 2.12.1 静态实现的特质链中的`super`
 
 	interface MessageHandler {
 	    void on(String message, Map payload)
@@ -1255,7 +1255,7 @@ Groovy提供了`Target`注解用来指定注解的作用域:
 
 	2. 存在对父类方法的显式引用，这意味着如果更改了类对特质的实现，会导致错误
 
-### 2.12.2 行为链中的`super`
+### 2.12.2 运行时实现的特质链中的`super`
 
 **为了解决上述问题，可以通过`super.methodName()`形式将调用委托给行为链中的下一个特质**,**这种形式十分强大，因为它允许编写彼此不认识的处理程序，并且按照任意的顺序组合它们**
 
@@ -1275,7 +1275,7 @@ Groovy提供了`Target`注解用来指定注解的作用域:
 - **因为在声明特质的语句中，越靠后的特质优先级越高。**因此会先输出`LoggingHandler`，再输出`DefaultHandler`
 		
 
-如果这时候再添加一个特质,该特质仅处理特定信息,能够看到行为链的作用:
+如果这时候再添加一个特质,该特质仅处理特定信息,能够更清晰的看到行为链的作用:
 	
 	trait SayHandler implements MessageHandler {
 	    void on(String message, Map payload) {
@@ -1305,24 +1305,218 @@ Groovy提供了`Target`注解用来指定注解的作用域:
 		Received foo with payload [:]
 		I say Hello!
 
-### 2.12.1 `super`在特质中的语义
+### 2.12.3 `super`在特质中的语义
 
 如果一个类实现了若干特质，并且每个特质中都使用了未限定的`super`调用
 
-1. **如果在行为链中，拥有下一个特质，那么就会调用下一个特质的方法**
+1. **如果在行为链中，存在下一个特质，那么就会调用下一个特质中的方法**
 
 2. **如果在行为链中，当前特质已经是最后一个，那么这时`super`就代表`this`**
 
+例如使用特质来修饰一个`final`类的方法:
 
-## 2.13 Advanced features
-### 2.13.1 SAM type coercion
+	trait Filtering {                                       
+	    StringBuilder append(String str) {                  
+	        def subst = str.replace('o','')                 
+	        super.append(subst)                             
+	    }
+	    String toString() { super.toString() }              
+	}
+	def sb = new StringBuilder().withTraits Filtering       
+	sb.append('Groovy')
+	assert sb.toString() == 'Grvy'    
+
+- `StringBuilder`是一个`final`类，其在运行时实现了`Filtering`特质
+
+	在调用`append()`方法时，会先调用特质中的`append()`方法，然后因为特质中使用了`super`进行调用，但是该特质已经是行为链中的最后一个，所以会被当做`this`使用，调用`StringBuilder`实例的`append()`方法
+
+	调用`toString()`方法是同样的流程
+
+## 2.13 高级功能
+### 2.13.1 SAM(`Single Abstract Method`)类型强转
+如果特质中定义了一个抽象方法，那么它就是SAM类型强转的候选
+
+	trait Greeter {
+		// 调用了getName()
+	    String greet() { "Hello $name" }        
+	    abstract String getName()               
+	}
+	
+因为特质中只有一个抽象方法，因此可以按照如下方式实现
+
+	Greeter greeter = { 'Alice' }
+
+- 闭包就变成了抽象方法`getName()`的实现
+
+另外一种方式实现：
+
+	//直接定义一个方法
+	void greet(Greeter g) { println g.greet() } 
+	greet { 'Alice' } 	
+	
+-  `great()`方法接受SAM类型的`Greeter`作为参数
+	
 ### 2.13.2 Differences with Java 8 default methods
-## 2.14 Differences with mixins
-## 2.15 Static methods, properties and fields
+## 2.14 特质与mixin的区别
+
+**在Groovy中，特质和`mixin`有几个概念上的差异。 请注意当前所说的是的是运行时`mixin`(运行时调用`mixin()`方法)，而不是`@Mixin`注释(它被弃用以支持特质)**
+
+**首先，在特质中定义的方法在字节码中是可见的**
+
+- 在内部，特质表示为接口（没有默认或静态方法）和几个辅助类
+
+- 这意味着实现特质的对象实际上实现了一个接口
+
+- 这些方法在Java中是可见的
+
+- 它们与类型检查和静态编译兼容
+
+**而`mixin`仅在运行时可见**
+
+	class A { String methodFromA() { 'A' } }        
+	class B { String methodFromB() { 'B' } }        
+	A.metaClass.mixin B                             
+	def o = new A()
+	assert o.methodFromA() == 'A'                   
+	assert o.methodFromB() == 'B'                   
+	assert o instanceof A                           
+	assert !(o instanceof B) 
+
+- **在运行时A类`mixin`B类，所获得的A类的实例可以同时调用俩个类中的方法，但是实例仍然是A而不是B**
+
+	实例仍然是A类型很重要，**它说明了一个`mixin`比特质更有优势的地方：实例没有被修改，所以如果把一些类`mixin`到另一个类中，不会导致第三个类生成，并且被`mixin`的类中的方法，仍然可以调用**.
+
+
+## 2.15 静态的 方法/属性/字段
+**特质中的静态方法/属性/字段 仍然处于开发阶段，仅适用于2.5.7**
+
 ## 2.16 Inheritance of state gotchas
+
+特质是有状态的,因此它可以定义字段或属性，但是当类实现特质时，它会基于特质来获取这些字段/属性。 
+
+	trait IntCouple {
+	    int x = 1
+	    int y = 2
+	    int sum() { x+y }
+	}
+
+	class BaseElem implements IntCouple {
+	    int f() { sum() }
+	}
+	def base = new BaseElem()
+	assert base.f() == 3
+
+	class Elem implements IntCouple {
+	    int x = 3                                       
+	    int y = 4                                       
+	    int f() { sum() }                               
+	}
+	def elem = new Elem()
+	assert elem.f() == 3
+
+- `elem.f()`的结果仍然是3，这是因为`sum()`方法使用的是特质中的属性.**如果希望解除`sum()`方法中对特质属性的引用，那么可以通过手动添加`getter/setter`方法**
+
+		trait IntCouple {
+		    int x = 1
+		    int y = 2
+		    int sum() { getX()+getY() }
+		}
+		
+		class Elem implements IntCouple {
+		    int x = 3
+		    int y = 4
+		    int f() { sum() }
+		}
+		def elem = new Elem()
+		assert elem.f() == 7
+
+
 ## 2.17 Self types
 ### 2.17.1 Type constraints on traits
+**特质可以被设置为仅应用在特定的类型上**
+
+例如，可能希望将一个特质应用于一个扩展了另一个无法控制的类的类，但是仍然能够调用那些方法。
+
+	// 定义在其他库中，无法修改
+	class CommunicationService {
+	    static void sendMessage(String from, String to, String message) {       
+	        println "$from sent [$message] to $to"
+	    }
+	}
+	// 定义在其他库中，无法修改
+	class Device { String id }                                                  
+	
+	trait Communicating {
+	    void sendMessage(Device to, String message) {
+	        CommunicationService.sendMessage(id, to.id, message)                
+	    }
+	}
+	
+	//继承了Device类，并且实现了Communicating特质
+	class MyDevice extends Device implements Communicating {}                   
+	
+	def bob = new MyDevice(id:'Bob')
+	def alice = new MyDevice(id:'Alice')
+	bob.sendMessage(alice,'secret')       
+
+- 特质的`sendMessage()`方法会被调用，并且`id`被解析
+
+
+- 从逻辑来看，很明显特质`Communicating `只能应用于类`Device`,但是没有明确的约束，因为特质不能扩展类。 但是这里代码编译和运行完全正常，因为特质的方法中的`id`将被动态解析。 
+
+	没有什么可以阻止特质应用于任何不是`Device`类型的类,任何具有`id`属性的类都可以应用特质，而任何没有`id`属性的类都会导致运行时错误
+	
+	- 如果这时想在特质上启用类型检查或应用`@CompileStatic`，问题就更复杂了：因为特征对自身不是被应用于一个`Device`类型一无所知，所以类型检查器只会报告它没有找到`id`属性
+
+	- 一个可能的解决方案是使用`getId()`方法来获取属性`id`,但是这并不能解决所有问题，例如如果需要的参数是`this`,但是实际上是需要`Device`?
+
+			class SecurityService {
+			    static void check(Device d) { if (d.id==null) throw new SecurityException() }
+			}
+		
 ### 2.17.2 The @SelfType annotation
+Groovy提供了一个`@groovy.transform.SelfType`注释解决上述问题，它的功能如下
+
+- **声明实现此特质的类必须继承或实现指定的类型**
+
+- **如果不满足这些类型约束，则抛出编译时错误**
+
+示例：
+
+	@SelfType(Device)
+	@CompileStatic
+	trait Communicating {
+	    void sendMessage(Device to, String message) {
+	        SecurityService.check(this)
+	        CommunicationService.sendMessage(id, to.id, message)
+	    }
+	}
+	// 这里会有异常抛出
+	class MyDevice implements Communicating {} // forgot to extend Device
+	
+	class 'MyDevice' implements trait 'Communicating' but does not extend self type class 'Device'
+
+	
 ## 2.18 Limitations
 ### 2.18.1 Compatibility with AST transformations
+
+**特质并没有与AST transformations 正式兼容**
+
 ### 2.18.2 Prefix and postfix operations
+
+**在特质中，不允许自增和自减操作更新特质的字段**
+
+	trait Counting {
+	    int x
+	    void inc() {
+	        x++                             
+	    }
+	    void dec() {
+	        --x                             
+	    }
+	}
+	class Counter implements Counting {}
+	def c = new Counter()
+	c.inc()
+	
+- **变通方案是使用`+=`**	
