--- a/Groovy学习/语法规范/操作符.md
+++ b/Groovy学习/语法规范/操作符.md
@@ -720,18 +720,22 @@ Groovy允许重载各种运算符:
 
 
 Operator	|Method	|Operator	|Method
-:---:|:---:|:---:|:---:
-`+`|`a.plus(b)`|`a[b]`|`a.getAt(b)`
-`-`|`a.minus(b)`|`a[b] = c`|`a.putAt(b, c)`
-`*`|`a.multiply(b)`|`a in b`|`b.isCase(a)`
-`/`|`a.div(b)`|`<<`|`a.leftShift(b)`
-`%`|`a.mod(b)`|`>>`|`a.rightShift(b)`
-`**`|`a.power(b)`|`>>>`|`a.rightShiftUnsigned(b)`
-`|`|`a.or(b)`|`++`|`a.next()`
-`&`|`a.and(b)`|`--`|`a.previous()`
-`^`|`a.xor(b)`|`+a`|`a.positive()`
-`as`|`a.asType(b)`|`-a`|`a.negative()`
+:---:|:---:|:---:|:---
+`a + b`|`a.plus(b)`|`a[b]`|`a.getAt(b)`
+`a - b`|`a.minus(b)`|`a[b] = c`|`a.putAt(b, c)`
+`a * b`|`a.multiply(b)`|`a in b`|`b.isCase(a)`
+`a / b`|`a.div(b)`|`a << b`|`a.leftShift(b)`
+`a % b`|`a.mod(b)`|`a >> b`|`a.rightShift(b)`
+`a ** b`|`a.power(b)`|`a >>> b`|`a.rightShiftUnsigned(b)`
+`a | b`|`a.or(b)`|`a++ or ++a`|`a.next()`
+`a & b`|`a.and(b)`|`a-- or --a`|`a.previous()`
+`a ^ b`|`a.xor(b)`|`+a`|`a.positive()`
+`a as b`|`a.asType(b)`|`-a`|`a.negative()`
 `a()`|`a.call()`|`~a`|`a.bitwiseNegate()`
-
+`switch(a) { case(b) : }`|`b.isCase(a)`|`if(a)`|`a.asBoolean()`
+`a == b`|`a.equals(b)`|`a != b`|`!a.equals(b)`
+`a <=> b`|`a.compareTo(b)`|`a > b`| `a.compareTo(b)>0`
+`a >= b`|`a.compareTo(b)>=0`|`a < b`| `a.compareTo(b)<0`
+`a <= b`|`a.compareTo(b) <=0`| |  
 
 	
