--- a/Groovy学习/语法规范/程序结构.md
+++ b/Groovy学习/语法规范/程序结构.md
@@ -168,7 +168,7 @@ Groovy支持脚本形式和类形式
 
 ## 3.2 脚本类
 
-**Groovy编译器会将脚本编译成一个类，并将脚本的主体复制到一个`run`方法中**
+**Groovy编译器会将脚本编译成一个继承了`groovy.lang.Script`的类，并将脚本的主体复制到一个`run`方法中**
 
 因此3.1小节中脚本的示例会生成如下的类:
 
