--- a/Groovy学习/语法规范/程序结构.md
+++ b/Groovy学习/语法规范/程序结构.md
@@ -6,9 +6,11 @@
 
 介绍Groovy程序结构
 
-限定类名指代类名全称，其包含`.`分隔开的包路径
+限定类名和非限定类名:
 
-非限定类名即不带包名
+1. **限定类名指代类名全称，其包含`.`分隔开的包路径**
+
+2. **非限定类名即不带包名**
 
 # 1. 包名
 
@@ -81,7 +83,7 @@ Groovy会默认导入常用的包:
 - 星导入可能导致本地命令控件混乱！因此Groovy提供了别名操作来解决这个问题！
 
 ## 2.4 静态导入
-**Groovy提供的静态导入功能支持像使用当前类的静态方法一样去使用被导入的静态方法**
+**Groovy提供的静态导入功能支持像使用当前类的静态方法/属性一样去使用被导入的静态方法/属性**
 
 	import static Boolean.FALSE
 	
@@ -108,11 +110,11 @@ Groovy会默认导入常用的包:
 
 - **如果具有相同的类型，则导入的类优先**
 
-## 2.5 静态导入别名
+## 2.5 设置静态导入的别名
 
 **使用`as`关键字,可以解决静态导入的命名空间问题**
 
-假设使用`getInstance()`方法获取`Calendar`实例。 这是一个静态方法，因此可以使用静态导入该方法。 但每次都调用`getInstance()`会产生误导,因此借助`as`在静态导入时设置别名，可以提高代码可读性：
+假设使用`getInstance()`方法获取`Calendar`实例。 这是一个静态方法，因此可以使用静态导入该方法。 但每次都调用`getInstance()`十分麻烦,因此借助`as`在静态导入时设置别名，可以提高代码可读性：
 
 
 	import static Calendar.getInstance as now
@@ -121,7 +123,7 @@ Groovy会默认导入常用的包:
 
 ## 2.6 静态星导入
 
-静态星导入将导入给定类中的所有静态方法
+**静态星导入将导入给定类中的所有静态方法/属性**
 
 假设当前需要使用`java.lang.Math`类中的`sin`和`cos`静态方法,通过静态星导入的实现如下：
 
@@ -132,7 +134,7 @@ Groovy会默认导入常用的包:
 
 - 可以不借助`Math`直接去调用方法
 
-## 2.7 导入别名
+## 2.7 设置导入包的别名
 
 **Groovy提供了类型别名功能，借助`as`符号可以将自定义的名称引用限定的类名**
 
@@ -168,18 +170,35 @@ Groovy支持脚本形式和类形式
 
 ## 3.2 脚本类
 
-**Groovy编译器会将脚本编译成一个继承了`groovy.lang.Script`的类，并将脚本的主体复制到一个`run`方法中**
+**Groovy编译器会将脚本编译成一个继承了`groovy.lang.Script`的类，脚本的方法会被复制到`Script`类中，脚本的主体会被复制到`Script.run()`方法中**
 
 因此3.1小节中脚本的示例会生成如下的类:
 
-	// Main.groovy
-	import org.codehaus.groovy.runtime.InvokerHelper
-	class Main extends Script {                     
-	    def run() {                                 
-	        println 'Groovy world!'                 
+	// Sample.groovy
+	import groovy.lang.Binding;
+	import groovy.lang.Script;
+	import org.codehaus.groovy.runtime.InvokerHelper;
+	import org.codehaus.groovy.runtime.callsite.CallSite;
+	
+	public class Sample extends Script {
+	    public Sample() {
+	        CallSite[] var1 = $getCallSiteArray();
+	        super();
 	    }
-	    static void main(String[] args) {           
-	        InvokerHelper.runScript(Main, args)     
+	
+	    public Sample(Binding context) {
+	        CallSite[] var2 = $getCallSiteArray();
+	        super(context);
+	    }
+	
+	    public static void main(String... args) {
+	        CallSite[] var1 = $getCallSiteArray();
+	        var1[0].call(InvokerHelper.class, Sample.class, args);
+	    }
+	
+	    public Object run() {
+	        CallSite[] var1 = $getCallSiteArray();
+	        return var1[1].callCurrent(this, "hello groovy!");
 	    }
 	}
 
@@ -270,7 +289,7 @@ Groovy支持脚本形式和类形式
 	}
 	printx()
 
-反编译过来的话如下：  
+**反编译过来的话如下：** 
 
 	public Object run()
   	{
