--- a/Groovy学习/语法规范/操作符.md
+++ b/Groovy学习/语法规范/操作符.md
@@ -150,6 +150,7 @@ Operator	|Purpose
 
 - `~`: 按位非
 
+示例:
 
 	int a = 0b00101010
 	assert a == 42
@@ -203,13 +204,15 @@ Operator	|Purpose
 	displayName = user.name ?: 'Anonymous'   
 	
 	
-# 6. 对象操作符
+# 6. 对象运算符
 
-## 6.1 Safe navigation operator
+## 6.1 安全导航运算符
 
-安全导航操作符用于避免`NullPointerException`。 通常，在引用对象时，可能需要在访问对象的方法或属性之前验证它是否为`null`。 为了避免这种情况，安全导航操作符将只返回`null`而不是抛出异常
+**Groovy提供了安全导航运算符(`?.`)用于避免访问空对象时抛出`NullPointerException `**
 
-如下所示：
+- 通常，在引用对象时，可能需要在访问对象的方法或属性之前验证它是否为`null`。 为了避免这种情况，安全导航运算符将只返回`null`而不是抛出异常
+
+示例：
 
 	// find 将返回一个null
 	def person = Person.find { it.id == 123 }    
@@ -236,7 +239,7 @@ Operator	|Purpose
 	
 ## 6.3 方法指针运算符
 
-**方法指针操作符(`.&`)用于获取指定变量的方法引用，之后可以使用这个方法引用，并且这个方法引用时作用在对应的变量之上**
+**方法指针运算符(`.&`)用于获取指定变量的方法引用，之后可以使用这个方法引用，并且这个方法引用时作用在对应的变量之上**
 
 	def str = 'example of method reference'            
 	def fun = str.&toUpperCase                         
@@ -264,7 +267,7 @@ Operator	|Purpose
 	assert transform(list, action) == ['Bob is 42', 'Julia is 35']  
 		
 
-方法指针由接收器和方法名称绑定。方法指针的参数在运行时解析，这意味着如果有多个具有相同名称的方法指针，语法也没有什么不同，它们会在运行选择适当方法
+**方法指针的参数在运行时解析，这意味着如果有多个具有相同名称的方法指针，语法也没有什么不同，它们会在运行选择适当方法**
 
 	def doSomething(String str) { str.toUpperCase() }    
 	def doSomething(Integer x) { 2*x }                   
@@ -284,7 +287,7 @@ Operator	|Purpose
 	def p = ~/foo/
 	assert p instanceof Pattern
 	
-- 通常情况下，模式操作符会与斜线字符串一起使用，但实际上它可以和任何类型的字符串一起使用
+- **通常情况下，模式运算符会与斜线字符串一起使用，但实际上它可以和任何类型的字符串一起使用**
 		
 		// 单引号字符串
 		p = ~'foo'   
@@ -306,7 +309,7 @@ Operator	|Purpose
 	    throw new RuntimeException("Oops, text not found!")
 	}
 
-- `=~`使用`match`为变量`text`创建了一个`Matcher`实例
+- `=~`使用`match`为匹配规则，对变量`text`创建了一个`Matcher`实例
 
 - `!m`可以等价为`!m.find()`	
 
@@ -341,13 +344,13 @@ Operator	|Purpose
 
 - 然后访问这个`cars`列表上所有条目的`make`属性,并将属性的值保存到了一个列表`makes`中
 
-- **表达式`cars*.make`等价于`cars.collect{it.make}`**
+- **实际上，表达式`cars*.make`等价于`cars.collect{it.make}`**
 
-	`Object.collect(Closure cl)`方法用于遍历聚合对象，并将每个item传给闭包作为参数，并收集闭包的返回值
+	**`Object.collect(Closure cl)`方法用于遍历聚合对象，并将每个item传给闭包作为参数，并收集闭包的返回值**
 	
 **Groovy的`GPath`表示法允许在引用的属性不是包含列表的属性时使用捷径，在这种情况下，它会自动扩展。例如上面的例子中，表达式`cars*.make`与`cars.make`效果相同，但通常建议保留显式的扩展点操作符**
 
-展开点操作符是空安全的，这意味着如果集合的元素为空，它将返回`null`，而不是抛出`NullPointerException`
+**展开点操作符是空安全的，这意味着如果集合的元素为空，它将返回`null`，而不是抛出`NullPointerException`**
 
 	cars = [
 	   new Car(make: 'Peugeot', model: '508'),
@@ -485,7 +488,7 @@ Operator	|Purpose
 - `m1`被展开之后会在元素`d:8`之前，`c:3`之后
 
 
-## 8.2 `Range`操作符
+## 8.2 `Range`运算符
 
 **Groovy支持`Range`概念，并提供了符号`..`来创建一个`Range`实例**
 
@@ -498,19 +501,23 @@ Operator	|Purpose
 
 - **默认的`Range`是包含边界的，即`0..5`是下限为0，上限为5. Groovy提供`<`符号去除边界,但仅适用于上限**
 
-`Range`的实现是轻量级的，这意味着它值存储下限和上限。 任何实现了`Comparable`接口，并且具有`next()`和`previous()`方法(用来确定下一个或上一个条目)的对象 就可以用来创建`Range`。 例如，可以通过以下方式创建一系列字符：
+**`Range`的实现是轻量级的，这意味着它值存储下限和上限。 任何实现了`Comparable`接口，并且具有`next()`和`previous()`方法(用来确定下一个或上一个条目)的对象 就可以用来创建`Range`**。 例如，可以通过以下方式创建一系列字符：
 
 	assert ('a'..'d').collect() == ['a','b','c','d']
 
 
-## 8.3 `Spaceship`操作符
+## 8.3 `Spaceship`运算符
 
-`Spaceship`操作符`<=>`委托给了`compareTo()`方法
+`Spaceship`运算符`<=>`委托给了`compareTo()`方法
 
+	assert (1 <=> 1) == (1.compareTo(1))
 	assert (1 <=> 1) == 0
 	assert (1 <=> 2) == -1
 	assert (2 <=> 1) == 1
 	assert ('a' <=> 'z') == -1
+	
+	
+**返回值有三种可能：**
 
 - 返回值大于零表示前者大于后者
 
@@ -519,9 +526,9 @@ Operator	|Purpose
 - 返回值等于零表示俩者相等
 
 
-## 8.4 下标操作符(`Subscript operator`)
+## 8.4 下标运算符(`Subscript operator`)
 
-下标操作符是`getAt()`或`putAt()`的一种缩写的符号，具体下标操作符的作用取决于其是在赋值语句的左侧或右侧进行使用
+**下标运算是`getAt()`或`putAt()`的一种缩写的符号，具体下标操作符的作用取决于其是在语句的左侧或右侧进行使用**
 	
 	def list = [0,1,2,3,4]
 	assert list[2] == 2                         
@@ -534,7 +541,7 @@ Operator	|Purpose
 
 - `list[2]=4`可以用`list.putAt(2,4)`替代
 
-- **下标操作符同样支持使用`Range`**,即`list[0..2]=[6,6,6]`可以用`list.putAt(0..2,[6,6,6])`替代
+- **下标运算符同样支持使用`Range`**,即`list[0..2]=[6,6,6]`可以用`list.putAt(0..2,[6,6,6])`替代
 
 
 将下标运算符对应的实现`getAt()/putAt()`方法进行自定义实现，可以快速解构对象：
@@ -563,12 +570,12 @@ Operator	|Purpose
 	user[1] = 'Bob'                                                    
 	assert user.name == 'Bob' 
 
-- **任何定义了`getAt()`和`putAt()`方法的对象都可以使用下标操作符**
+- **任何定义了`getAt()`和`putAt()`方法的对象都可以使用下标运算符**
 
 
-## 8.5 成员操作符(`Membership operator`)
+## 8.5 成员运算符(`Membership operator`)
 
-成员操作符(`in`)的作用等同于调用`isCase()`方法。 对列表使用`in`操作符，相当于调列表的`contains()`方法
+成员运算符(`in`)的作用等同于调用`isCase()`方法。 对列表使用`in`操作符，相当于调列表的`contains()`方法
 
 	def list = ['Grace','Rob','Emmy']
 	assert ('Emmy' in list)    
@@ -577,7 +584,7 @@ Operator	|Purpose
 
 - 上面三种表达方式都能得到同样的结果
 
-## 8.6 恒等操作符(`Identity operator`)
+## 8.6 恒等运算符(`Identity operator`)
 
 **在Groovy中，使用恒等运算符`==`测试等式与在Java中是不同。在Groovy中,`==`会调用`equals()`方法对内容进行比较**
 
@@ -589,20 +596,24 @@ Operator	|Purpose
 		assert !list1.is(list2)    
 
 
-## 8.7 强转操作符(`coercion operator`)
+## 8.7 强转运算符(`coercion operator`)
 
-**强转操作符(`as`)是类型转换的一种变体，使用它不需要转换前后的类型兼容**,该操作符委托`asType()`方法实现
+**强转运算符(`as`)是类型转换的一种变体，使用它不需要转换前后的类型兼容**,该运算符委托`asType()`方法实现
+
+示例:
 	
 	String x = '123'
 	Integer s = (Integer) x        
 
-- 这里会抛出异常`CLassCastException`,但是使用`as`操作符不会抛出异常
+- **这里会抛出异常`ClassCastException`,但是使用`as`操作符不会抛出异常**
 
 		String x = '123'
 		Integer s = x as Integer   
 
 
-当一个对象被强制转换为另一个对象时，除非目标类型与源类型相同，否则强制将返回一个新对象。 强转规则视源类型和目标类型而定，如果没有找到转换规则，强制可能会失败。 
+**当一个对象被强制转换为另一个对象时，除非目标类型与源类型相同，否则强制将返回一个新对象**
+
+-  强转规则视源类型和目标类型而定，如果没有找到转换规则，强制可能会失败
 
 **可以借助`asType()`方法，实现自定义转换规则：**
 
@@ -627,19 +638,19 @@ Operator	|Purpose
 - 创建了一个拥有自定义`asType()`方法的对象`User`,并使用其实例进行类型转换
 
 
-## 8.8 菱形操作符(`diamond operator`) 
+## 8.8 菱形运算符(`diamond operator`) 
 
-菱形运算符（`<>`）是一个仅用于语法的操作符，用于兼容Java 7中相同名称的操作符
+菱形运算符（`<>`）是一个仅用于语法的操作符，用于兼容Java 7中相同名称的运算符
 
 - **它用于指示从声明中推断而来的泛型类型**
 
 		List<String> strings = new LinkedList<>()
 
-在动态Groovy中，这个操作符未被使用。在Groovy的静态类型检查中，它也是可选的，因为无论该操作符是否存在，Groovy类型检查器都会执行类型推断
+在动态Groovy中，这个运算符未被使用。在Groovy的静态类型检查中，它也是可选的，因为无论该运算符是否存在，Groovy类型检查器都会执行类型推断
 
-## 8.9 调用操作符(`call operator`)
+## 8.9 调用运算符(`call operator`)
 
-调用操作符(`()`)用于隐式调用一个名称为`call`的方法。对于任意定义了`call()`方法的对象，都可以直接使用调用操作符来替代`call()`方法的使用
+**调用运算符(`()`)用于隐式调用一个名称为`call`的方法。对于任意定义了`call()`方法的对象，都可以直接使用调用运算符来替代`call()`方法的使用**
 
 	class MyCallable {
 	    int call(int x) {           
@@ -652,7 +663,7 @@ Operator	|Purpose
 	assert mc(2) == 4 
 		
 
-# 9. 操作符优先级
+# 9. 运算符优先级
 
 
 Level	|Operator(s)|	Name(s)
@@ -681,7 +692,7 @@ Level	|Operator(s)|	Name(s)
 15|`=` `**=` `*=` `/=` `%=` `+=` `-=` `<<=` `>>=` `>>>=` `&=` `^=` `|=`|various assignments
 
 
-# 10. 操作符重载
+# 10. 运算符重载
 
 Groovy允许重载各种运算符:
 
@@ -694,7 +705,8 @@ Groovy允许重载各种运算符:
 	        return new Bucket(this.size + other.size)
 	    }
 	}
-- 因为类`Bucket`实现了一个特殊方法`plus()`,所以`Bucket`实例可以直接使用操作符`+`，运算时会执行`plus()`定义的逻辑
+
+- 因为类`Bucket`实现了一个特殊方法`plus()`,所以`Bucket`实例可以直接使用运算符`+`，运算时会执行`plus()`定义的逻辑
 
 		def b1 = new Bucket(4)
 		def b2 = new Bucket(11)
@@ -702,9 +714,9 @@ Groovy允许重载各种运算符:
 
 ## 10.1 重点
 
-**除了比较操作符之外，所有Groovy操作符都有一个对应的方法，可以在自己的类中实现**
+**除了比较运算符之外，所有Groovy运算符都有一个对应的方法，可以在自己的类中实现**
 
-- 要求:
+- **要求:**
 
 	**方法必须拥有`public`修饰符，有正确的名称，有正确的参数数量。 参数类型决定了运算符右侧支持的类型**
 	
