--- a/Flutter学习/功能性介绍/文件操作与网络请求.md
+++ b/Flutter学习/功能性介绍/文件操作与网络请求.md
@@ -325,6 +325,230 @@ Dart IO库中提供了Http请求的一些类，可以直接使用`HttpClient`来
 
 [实例：Http分块下载](https://github.com/flutterchina/flutter-in-action/blob/master/docs/chapter10/download_with_chunks.md)
 
+# 5. WebSocket
+
+Http协议是无状态的，只能由客户端主动发起，服务端再被动响应，服务端无法向客户端主动推送内容，并且一旦服务器响应结束，链接就会断开(`keep-alive`机制并不能长久的保持连接)，所以无法进行实时通信。WebSocket协议正是为解决客户端与服务端实时通信而产生的技术，现在已经被主流浏览器支持，所以对于Web开发者来说应该比较熟悉了，Flutter也提供了专门的包来支持WebSocket协议
+
+- Http协议中虽然可以通过keep-alive机制使服务器在响应结束后链接会保持一段时间，但最终还是会断开，keep-alive机制主要是用于避免在同一台服务器请求多个资源时频繁创建链接，它本质上是支持链接复用的技术，而并非用于实时通信
+
+
+WebSocket协议本质上是一个基于tcp的协议，它是先通过HTTP协议发起一条特殊的http请求进行握手后，如果服务端支持WebSocket协议，则会进行协议升级。WebSocket会使用http协议握手后创建的tcp链接，和http协议不同的是，WebSocket的tcp链接是个长链接（不会断开），所以服务端与客户端就可以通过此TCP连接进行实时通信
+
+- [webScoket.org](http://www.websocket.org/echo.html)提供了测试服务器，会将请求的信息原样的返回
+
+## 5.1 使用的包
+
+[`web_socket_channel` package](https://pub.dev/packages/web_socket_channel)是一个连接到WebSocket服务器的工具包
+
+该package提供了一个`WebSocketChannel`类来监听来自服务器的消息，并将消息发送到服务器
+
+## 5.2 主要步骤
+
+1. 连接到WebSocket服务器
+
+	创建一个`WebSocketChannel`连接到一台服务器：
+
+		final channel = new IOWebSocketChannel.connect('ws://echo.websocket.org');
+
+2. 监听来自服务器的消息
+
+	使用一个[`StreamBuilder`](https://api.flutter.dev/flutter/widgets/StreamBuilder-class.html)组件来监听新消息
+	
+		new StreamBuilder(
+		  stream: widget.channel.stream,
+		  builder: (context, snapshot) {
+		    return new Text(snapshot.hasData ? '${snapshot.data}' : '');
+		  },
+		);
+
+3. 将数据发送到服务器
+
+	通过`WebSocketChannel`提供的`sink`的`add()`方法，将数据发送到服务器
+	
+		channel.sink.add('Hello!');
+
+
+4. 关闭WebSocket连接
+
+	`WebSocket`使用完毕之后必须关闭
+
+		channel.sink.close();
 
 
 
+### 5.2.1 StreamBuilder工作原理
+
+`WebSocketChannel`提供了一个来自服务器的消息`Stream`:
+
+该`Stream`类是`dart:async`包中的一个基础类,它提供了一种方法来监听来自数据源的异步事件
+
+- 与`Future`返回单个异步响应不同，`Stream`类可以随着时间推移传递很多事件
+
+- **`StreamBuilder`组件将连接到一个Stream， 并在每次收到消息时通知Flutter重新构建界面**
+
+### 5.2.2 StreamSink工作原理
+
+`WebSocketChannel`提供了一个`StreamSink`，它可以将消息发给服务器
+
+- `StreamSink`类提供了同步或异步方法，用来给数据源添加事件
+
+
+# 6. Socket
+
+`Http`协议和`WebSocket`协议都属于应用层协议，除了它们，应用层协议还有很多如：SMTP、FTP等，**它们都是通过Socket实现的**
+
+其实，操作系统中提供的原生网络请求API是标准的，在C语言的`Socket`库中，它主要提供了端到端建立链接和发送数据的基础API，而高级编程语言中的`Socket`库其实都是对操作系统的`socket` API的一个封装
+
+所以，如果需要自定义协议或者想直接来控制管理网络链接、又或者觉得自带的`HttpClient`不好用想重新实现一个，这时就需要使用`Socket`库
+
+- **Flutter的`Socket` API在`dart io`包中**
+
+下面看一个使用Socket实现简单http请求的示例，以请求百度首页为例：
+
+	_request() async{
+	  //建立连接
+	  var socket=await Socket.connect("baidu.com", 80);
+	  //根据http协议，发送请求头
+	  socket.writeln("GET / HTTP/1.1");
+	  socket.writeln("Host:baidu.com");
+	  socket.writeln("Connection:close");
+	  socket.writeln();
+	  await socket.flush(); //发送
+	  //读取返回内容
+	  _response =await socket.transform(utf8.decoder).join();
+	  await socket.close();
+	}
+
+
+# 7. Json Model
+
+## 7.1 dart:conver库
+
+Flutter提供了`dart:convert`库中内置的JSON解码器`json.decode()` 来实现JSON格式的字符串转为Dart对象，该方法可以根据JSON字符串具体内容将其转为List或Map，这样就可以通过Dart对象来查找所需的值，如：
+
+	//一个JSON格式的用户列表字符串
+	String jsonStr='[{"name":"Jack"},{"name":"Rose"}]';
+	//将JSON字符串转为Dart对象(此处是List)
+	List items=json.decode(jsonStr);
+	//输出第一个用户的姓名
+	print(items[0]["name"]);
+
+- 通过`json.decode() `将JSON字符串转为List/Map的方法比较简单，它没有外部依赖或其它的设置，对于小项目很方便
+
+但当项目变大时，这种手动编写序列化逻辑可能变得难以管理且容易出错，例如有如下JSON:
+
+	{
+	  "name": "John Smith",
+	  "email": "john@example.com"
+	}
+	Map<String, dynamic> user = json.decode(json);
+	
+	print('Howdy, ${user['name']}!');
+	print('We sent the verification link to ${user['email']}.');
+	
+- 由于`json.decode()`仅返回一个`Map<String, dynamic>`，这意味着直到运行时才知道值的类
+
+	如果通过这种方法，就会失去了大部分静态类型语言特性：类型安全、自动补全和最重要的编译时异常。这样一来代码变得非常容易出错
+	
+	例如，当访问name或email字段时，输入的很快，导致字段名打错了。但由于这个JSON在map结构中，所以编译器不知道这个错误的字段名，所以编译时不会报错,但是真正运行时就会抛出异常
+
+
+## 7.1 解决办法
+
+**为了解决上述的问题，Flutter提供了`Json Model`化，具体做法就是:**
+
+- 通过预定义一些与`Json`结构对应的`Model`类，然后在请求到数据后再动态根据数据创建出Model类的实例。这样一来，在开发阶段使用的是Model类的实例，而不再是`Map/List`，这样访问内部属性时就不会发生拼写错误
+
+
+可以通过引入一个简单的模型类(`Model class`)来解决前面提到的问题,定义一个User类，其内部结构为：
+
+- 一个`User.fromJson` 构造函数, 用于从一个map构造出一个`User`实例 
+
+- 一个`toJson()`方法, 将 User 实例转化为一个map
+
+
+这样，调用代码现在可以具有类型安全、自动补全字段（name和email）以及编译时异常,如果将拼写错误字段视为int类型而不是String， 那么代码就不会通过编译，而不是在运行时崩溃
+
+	class User {
+	  final String name;
+	  final String email;
+	
+	  User(this.name, this.email);
+	
+	  User.fromJson(Map<String, dynamic> json)
+	      : name = json['name'],
+	        email = json['email'];
+	
+	  Map<String, dynamic> toJson() =>
+	    <String, dynamic>{
+	      'name': name,
+	      'email': email,
+	    };
+	}
+
+- 序列化
+
+		Map userMap = json.decode(json);
+		var user = new User.fromJson(userMap);
+		
+		print('Howdy, ${user.name}!');
+		print('We sent the verification link to ${user.email}.');
+
+- 反序列化
+
+		String json = json.encode(user);
+
+**在实践中，`User.fromJson`和`User.toJson`方法都需要单元测试到位，以验证正确的行为**
+
+## 7.2 自动生成Model
+
+Flutter官方推荐的`json_serializable`包,它是一个自动化的源代码生成器，可以在开发阶段生成JSON序列化模板，这样一来，由于序列化代码不再需要手动编写和维护，可以将运行时产生JSON序列化异常的风险降至最低
+
+### 7.2.1 项目总设置json_serializable
+
+**要包含`json_serializable`到项目中，需要一个常规依赖项和两个开发依赖项**
+
+- 开发依赖项就是不包含在应用程序源代码中的依赖项，它是开发过程中的一些辅助工具、脚本，和node中的开发依赖项相似
+
+`pubspec.yaml`文件:
+
+	dependencies:
+	  # Your other regular dependencies here
+	  json_annotation: ^2.0.0
+	
+	dev_dependencies:
+	  # Your other dev_dependencies here
+	  build_runner: ^1.0.0
+	  json_serializable: ^2.0.0
+
+### 7.2.2 以json_serializable的方式创建model类
+
+`user.dart`:
+
+	import 'package:json_annotation/json_annotation.dart';
+	
+	// user.g.dart 文件将在运行生成命令后自动生成
+	part 'user.g.dart';
+	
+	///这个标注是告诉生成器，这个类是需要生成Model类的
+	@JsonSerializable()
+	
+	class User{
+	  User(this.name, this.email);
+	
+	  String name;
+	  String email;
+	  //不同的类使用不同的mixin即可
+	  factory User.fromJson(Map<String, dynamic> json) => _$UserFromJson(json);
+	  Map<String, dynamic> toJson() => _$UserToJson(this);  
+	}
+
+- 通过`@JsonKey`注解可以重命名字段名称
+
+		//显式关联JSON字段名与Model属性的对应关系 
+		@JsonKey(name: 'registration_date_millis')
+		final int registrationDateMillis;
+
+- 
+
+	
