--- a/Flutter学习/功能性介绍/包与插件.md
+++ b/Flutter学习/功能性介绍/包与插件.md
@@ -196,9 +196,23 @@ shelf package 的目录结构:
 
 ## 5.3 开发Plugin包
 
-**如果要开发一个调用特定平台的API的包，则需要开发一个插件包**。 插件包就是Dart包的一个专门版本，除了Dart包的内容之外，还包含为Android（Java或Kotlin代码），iOS（Objective-C或Swift代码）或两者编写的特定于平台的实现
+Flutter允许调用特定平台的Api,无论是Android上的Java/Kotlin,还是iOS的ObjectC/Swift
 
-- **通过[platform channel](https://flutter.dev/docs/development/platform-integration/platform-channels)可以将Dart代码连接到特定平台实现**
+- 所谓"平台特定"或"特定平台",平台指的是Flutter运行的平台(android/iOS),可以认为是应用的原生部分
+
+	**通过[platform channel](https://flutter.dev/docs/development/platform-integration/platform-channels)可以将Dart代码连接到特定平台实现**
+
+	**平台通道(`platform channel`)就是Flutter与原生之间通信的桥梁,也是Flutter插件的底层基础**
+
+**如果要开发一个调用特定平台的API的包，则需要开发一个插件包**。 插件包就是Dart包的一个专门版本，除了Dart包的内容之外，还包含Android（Java或Kotlin代码)或iOS（Objective-C或Swift代码)的特定平台实现
+
+
+**Flutter与原生之间的通信依赖灵活的消息传递方式**：
+
+1. 应用的Flutter部分通过平台通道（`platform channel`）将消息发送到其应用程序的所在的宿主（iOS或Android）应用（原生应用）
+
+2. 宿主监听平台通道，并接收该消息。然后它会调用该平台的API，并将响应发送回客户端，即应用程序的Flutter部分
+
 
 ### 5.3.1 创建Plugin包
 有俩种方式可以创建Plugin包:
@@ -279,6 +293,111 @@ shelf package 的目录结构:
 # 6. 编写自定义的平台特定代码
 
 [Writing custom platform-specific code](https://flutter.dev/docs/development/platform-integration/platform-channels)
+
+**通过[platform channel](https://flutter.dev/docs/development/platform-integration/platform-channels)可以将Dart代码连接到特定平台实现**
+
+- **平台通道(`platform channel`)就是Flutter与原生之间通信的桥梁,也是Flutter插件的底层基础**
+
+## 6.1 平台通道(platform channel)
+**消息将会通过平台通道在客户端(UI)和宿主(platform)之间传递**
+
+![](http://ww1.sinaimg.cn/large/6ab93b35ly1g4c1ihemgij20g40hzmxi.jpg)
+
+在客户端，`MethodChannel`（API）允许发送与方法调用相对应的消息。 在宿主方面，Android（API）上的`MethodChannel`和iOS（API）上的`FlutterMethodChannel`启用接收方法调用并发回结果
+
+- 这些类使得可以通过使用非常少的"样板"代码开发平台插件
+
+- 消息传递是异步的，这确保了UI界面在消息传递时不会被挂起
+
+- 在Flutter应用中通过[MethodChannel Api](https://api.flutter.dev/flutter/services/MethodChannel-class.html)用于使用异步方法调用与平台插件通信的命名通道
+
+	在宿主平台上(Android,iOS),Android使用[MethodChannel Api](https://api.flutter.dev/javadoc/io/flutter/plugin/common/MethodChannel.html),iOS使用[MethodChannel Api](https://api.flutter.dev/objcdoc/Classes/FlutterMethodChannel.html)
+
+**消息传递(方法调用)可以是反向的，即客户端使用Dart实现方法用来提供给宿主进行方法调用**
+
+## 6.2 平台通道支持的数据类型
+标准平台通道使用标准消息编/解码器对消息进行编解码，它可以高效的对消息进行二进制序列化与反序列化(例如布尔值,数字,字符串,字节缓存区等)
+
+- **在发送和接收值的时候，会自动对这些值进行序列化和反序列化**
+
+由于Dart与原生平台之间数据类型有所差异，下面列出数据类型之间的映射关系([StandardMessageCodec](https://api.flutter.dev/flutter/services/StandardMessageCodec-class.html))
+
+Dart	|Android|	iOS
+---|---|---
+null	|null|	nil (NSNull when nested)
+bool	|java.lang.Boolean|	NSNumber numberWithBool:
+int|	java.lang.Integer|	NSNumber numberWithInt:
+int, if 32 bits not enough|	java.lang.Long|	NSNumber numberWithLong:
+int, if 64 bits not enough|	java.math.BigInteger|	FlutterStandardBigInteger
+double|	java.lang.Double|	NSNumber numberWithDouble:
+String|	java.lang.String|	NSString
+Uint8List|	byte[]|	FlutterStandardTypedData typedDataWithBytes:
+Int32List|	int[]|	FlutterStandardTypedData typedDataWithInt32:
+Int64List|	long[]|	FlutterStandardTypedData typedDataWithInt64:
+Float64List|	double[]|	FlutterStandardTypedData typedDataWithFloat64:
+List|	java.util.ArrayList|	NSArray
+Map|	java.util.HashMap|	NSDictionary
+
+- **当在发送和接收值时，这些值在消息中的序列化和反序列化会自动进行**
+
+## 6.3 示例(使用平台通道调用平台特定Api)
+5.3.2小节已经介绍了创建插件包的步骤，这里只介绍具体的实现:
+
+1. 在Flutter中使用`MethodChannel`构建平台通道，用来支持方法调用(Flutter的`State`类能够保存当前应用状态)
+
+	**平台通道的客户端和宿主之间通过平台通道构造函数中的通道名称参数进行连接**
+	
+	- **单个应用中使用的所有通道名称必须是唯一的,**建议在通道名称前加一个唯一的"域名前缀"，例如`samples.flutter.io/battery`
+
+			class _MyHomePageState extends State<MyHomePage> {
+			  static const platform = const MethodChannel('samples.flutter.dev/battery');
+			
+			  // Get battery level.
+			}
+2. 实现Android平台上的具体实现
+
+	1. 提供一个`MethodCallHandler`的具体实现类，在其`onMethodCall()`方法中完成具体的实现
+	
+	2. 提供一个静态方法供依赖插件包的Flutter应用进行Android部分注册
+
+			public class FlutterPlugin implements MethodCallHandler {
+			  /** Plugin registration. */
+			  public static void registerWith(Registrar registrar) {
+			    final MethodChannel channel = new MethodChannel(registrar.messenger(), "flutter_plugin");
+			    channel.setMethodCallHandler(new FlutterPlugin());
+			  }
+			
+			  @Override
+			  public void onMethodCall(MethodCall call, Result result) {
+			    if (call.method.equals("getPlatformVersion")) {
+			      result.success("Android+Other " + android.os.Build.VERSION.RELEASE);
+			    } else {
+			      result.notImplemented();
+			    }
+			  }
+			}
+			
+	**注意:Context可以通过`Registrar`获取**。还可以添加对是否注册状态的判断
+
+3. [实现iOS平台上的具体实现](https://github.com/flutterchina/flutter-in-action/blob/master/docs/chapter11/ios_implement.md)
+
+4. **在依赖于该插件包的Flutter应用中的原生部分对插件包的注册,包括iOS和Android**
+
+		public class MainActivity extends FlutterActivity {
+		    @Override
+		    protected void onCreate(Bundle savedInstanceState) {
+		        super.onCreate(savedInstanceState);
+		        FlutterPlugin.registerWith(this);
+		    }
+		}
+
+5. 在Flutter应用中使用Dart代码编写的Api即可
+
+## 6.4 自定义通道和编解码器
+除了`MethodChannel`,还可以使用更加基础的`BasicMessageChannel`,它支持使用自定义消息编解码器进行基本的异步消息传递
+
+- 此外,还可以使用专门的`BinaryCodec`,`StringCodec`和`JSONMessageCodec`类型，或者创建自己的编解码器
+
 
 # 7. 添加doc文档
 建议将以下文档添加到所有的包中(默认情况下会添加这些):
