--- a/english/英语学习笔记.md
+++ b/english/英语学习笔记.md
@@ -3,3 +3,12 @@
 	Tom was very proud of his model plane!
 	
 	i was afraid to make friends with anyone.
+	
+	
+2. 新概念学习
+
+新东方-新概念学习
+
+- https://www.youtube.com/watch?v=24XeXe2MgvM
+
+15天快学新概念	
