--- a/english/英语学习笔记.md
+++ b/english/英语学习笔记.md
@@ -12,3 +12,402 @@
 - https://www.youtube.com/watch?v=24XeXe2MgvM
 
 15天快学新概念	
+
+三十天攻克英语长难句
+
+# 名词
+
+## 1. 戴帽子
+
+冠词(名词的帽子) a an the
+
+## 2. 名词的单复数
+
+[英语可数名词变复数的规则和发音读音规则 ](http://www.sohu.com/a/33781383_108806)
+
+1. 以 s\sh\z\x\ch结尾,词末尾加上后缀-es
+
+2. 以f\fe 结尾，变f\fe 为ves
+
+## 3. 名词的可数&不可数
+
+不可数:不可以数的，不可以计算的
+
+1. 液体状的:water\tea\coffe\milk\beer
+
+2. 物质名词:soap\air\chocolate\rice
+
+3. 抽象名词:love\friendship\enthusiasm
+
+用法注意:
+
+1. 前面不能直接加a\an
+
+2. 前面不可以直接加one two three
+
+3. **没有复数形式，永远都是单数**
+
+当表示不可数名词的确切数量时，需要使用表示数量的单位词(量词)
+
+- 数量为一时，单位词用单数形式
+
+- 数量大于一时,单位词要用复数形式
+
+
+有时不可数名词可以当做可数名词使用
+
+- two coffees/two cups of coffe
+
+## 4. 名词所有格
+
+英语中的所属关系常用俩种方式表示
+
+1. 名词后+"'s"，通常用来表示有生命物的名词所有格
+
+	- 单数名词词尾+"'s",复数名词如果词尾没有s,也要加"'s"
+
+	- 名词已有复数词尾s,则只用加"'"
+
+	- 可以转换成"of + 名词"表示强调
+
+2. "of + 名词",多用来表示无生命的名词所有格
+
+- 表示时间，距离，国家，城市的所有格用"'s"
+
+
+双重所有格
+
+- 名词+of+名词所有格\名词性物主代词
+
+	a friend of my father's\ a friend of mine 
+
+特殊所有格
+
+- Mary and Alice 's mother 共同的母亲
+
+- Mary's and Alice's mother 不同的母亲
+
+
+## 5. 名词的性别
+
+king国王- queen 女王
+
+后缀`-ess`表示女性
+
+- god 神  goddess 女神 , prince 王子 princess公主
+
+
+# 数词
+
+## 1. 数字认读
+one two three four five six seven eight nine ten eleven twelve
+
+13-19的基数词，在个位数上加后缀-teen,有俩个重音
+
+- thirteen fourteen fifteen sixteen seventeen eighteen nineteen 
+
+20-90各整十位数的基数词都以ty结尾
+
+- twenty thirty forty fifty sixty seventy eighty ninety
+
+21-99之间的非整十位数的基数词要在十位和各位之间加连字符号"-"
+
+- twenty - three 
+
+三位数的基数词要在百位和十位(若无十位则和各位)之间加and，注意hundred没有复数形式
+
+- one hunred , one hunred and sixty one ,two hunred and thirteen 
+
+一千以上的数字,从后向前数,每三位加一个空格，第一个空格前为thousand(千),第二个空格前为million(百万)
+
+- forty four thousand one hundred and eighty one 44'181
+
+- 千 one thousand , two thousand two hundred and twenty two  2'222
+
+- 万 ten thousand,twenty two thousand two hundred and twenty two 22'222
+
+- 十万 one hundred thousand, two hundred and twenty two thousand two hundred twenty two 222'222
+
+- 百万 one million
+
+- 千万 ten million 
+
+- 亿 one hundred million 
+
+## 2. 点钟的表达
+
+最简单的形式
+
+5：00 five o'clock 11:00 eleven 
+
+7:09 seven o nine 
+
+3:10 three ten 
+
+past和to等表示时刻
+
+- **如果过了半点,用to,反之用past**,分钟在前，时钟在后
+
+	12.48 === twelve to one 
+	
+	7.12 === twelve past seven
+
+- 15分钟 === a quarter (四分之一) , 半小时 === a half(二分之一)
+
+## 3. 年份的表达
+
+1983 nineteen eighty-three , 1912  nineteen twelve 
+
+1607 sixteen o seven 
+
+2000 two thousand 
+
+2003 two thousand three 
+
+2015 two thousand fifteen 
+
+
+## 4. 货币的读法
+
+欧元:euro € 一般没有复数情况
+
+美元:dollar(dollars) $
+
+英镑:pound(pounds) £
+
+主要就是数词的读法+货币单位,注意euro通常没有复数形式，而美元，英镑在>2 时，需要使用复数形式
+
+seven euro , three pounds , five dollars , one pound , one dollar
+
+
+欧分:euro cent 一般没有复数情况,fifty euro cent 0.5
+
+美分:cent(cents),thirty cents 0.3
+
+便士:penny(pence),twenty pence 0.2
+
+元+分 之间不需要连词，使用空格隔开
+
+- six pounds ninety nine euro cent 6.99
+
+- six ninety-nine pounds 6.99 
+
+
+## 5. 序数词
+
+1. 序数词除了first,second,third外(缩写 1st 2nd 3rd ),4-19的序数词都是在基数词后加词尾-th构成,注意第五，第八，第九，第十二比较变化
+
+	fifth,eighth,ninth,twelfth
+	
+2. 20-90各个整十位数的序数词是将其相应的基数词词尾ty改为-tieth
+
+	twentieth,thirtieth.....
+
+3. 其他的序数词是将个位数改成序数词，而十，百，千等位上的数仍然用基数词
+
+hundred,thousand,million前若有具体数字，要用单数;泛指时,如果后面有of,则要用复数，并且前面不能再加具体数目
+
+- two thousand  , thousands of 成千上万 ,hundreds of 成百上千
+	
+## 6. 日期的表达
+
+8月2日 Aug,2nd   一月3日 Jan,3rd
+
+2月19日 Feb the ninetieth
+
+
+## 7. 分数词的读法
+分数的分子用基数词表示，分母用序数词表示
+
+- 读分数时，要先读分子然后在读分母
+
+- 分子超过1，则在分母(序数词)后加s
+
+- 如果一个分数有整数部分，整数和分数之间要加and
+
+1/3 基数词/序数词  one third
+
+2/3 基数词/序数词+s two thirds
+
+1 2/7 one and two sevenths
+
+## 8. 小数的表达
+
+小数点读作:point
+
+小数点前的数按照基数词读，小数点后的词，按照个位基数词顺序读出
+
+4.96 = four point nine six
+
+## 9. 百分数的表达
+
+符号% 百分比 percent( per cent)
+
+20% twenty percent 
+
+## 10. 数学运算
+
+加 plus/and
+
+- two plus/and two is four
+
+减 minus
+
+- two minus one is equal to one
+
+乘以 times/multiplied by
+
+- two times two is equal to four
+
+除以 divided by 
+
+- four divided by two is equal to two 
+
+
+## 11. 电话号码
+
+读电话号码时，通常一个个读，但是有些特殊情况
+
+- 数字0可以读作 oh 或zero ,俩个相同的数字重叠，如22,33可以念做 doulbe two 
+
+## 12. 次数
+
+once,twice,三次以上用"基数词+times"(nine times)
+
+a+序数词 表示再一次，相当于again , a seconed  = again
+
+
+### 12.1 倍数:times
+
+1. ..倍数+形容词(副词)比较级别 +than.. 翻译：A 比 B .....
+
+2. ..倍数+as+形容词(副词)+as ...  翻译：A 是 B 的几倍
+
+3. ..倍数+ the size/height/length/width ...+of... 翻译:A是B的...
+
+
+# 句子成分,种类和主谓一致
+
+中文习惯将次要部分提前,主要部分后置
+
+- 例如:伟大的无产阶级的接班人
+
+英文会将主要的部分提前，次要部分后置
+
+- 例如: a man who ......
+
+同位语在一定程度上可以当做简化的定语从句
+
+
+## 1. 句子成分
+
+句子成分的类型：
+
+- 基本成分
+
+	主语，谓语，宾语，表语，补语
+
+- 附属成分
+
+	定语，状语，同位语
+
+## 2. 句子成分的作用
+
+主语：
+
+- 是谓语讲述的对象，表示所说的"是什么","是谁"
+
+- 位	
+	
+
+## 3. 句子的种类
+
+用途分
+
+- 陈述句，疑问句，祈使句(命令句)，感叹句(what/how 引导)
+
+按结构分
+
+- 简单句，并列句，复合句（主从句）
+
+简单句分为：
+
+1. 主语+谓语
+
+2. 主语+谓语+宾语
+
+3. 主语+谓语+宾语+宾语补足语
+
+4. 主语+谓语+双宾语(前间，后直)
+
+5. 主语+系动词+表语
+
+
+**"双宾语"和"宾语+宾补"的判断方法:**
+
+- 在俩个名词之间加入"是"进行尝试翻译，如果不符合逻辑，则俩个名词为双宾关系;如果符合逻辑，则俩个名词为宾语和宾补的关系
+	
+- 宾语和宾补是存在逻辑关系的，而"双宾"并没有逻辑关系，因此可以从上面这种方式进行验证
+
+
+**复合句由一个和一个或一个以上的从句构成**
+
+- 主句通常可以单独存在，但是从句是从属与主句的
+
+	从句可以划分为三类
+	
+	1. 名词性从句(因为从句的作用相当于名词)
+
+		主语从句，宾语从句，表语从句，同位语从句
+
+	2. 状语从句
+
+	3. 定语从句
+
+- 同位语从句与定语从句相似，前者是可以替代掉名词，后者是用来修饰的，**俩者进行区分的判断方法如下:**
+
+	引导词是that,在从句中不做成分，并且不能省略，那么就是同位语从句
+	
+	引导词是that,并且在剧中做成分，可以省略,那么就是定语从句
+
+## 4. 主谓一致
+
+英语句子中，谓语受主语支配，动词必须和主语在人称和数上保持一致
+
+1. 语法一致
+
+	谓语动词和主语在单,复数形式上保持一致
+	
+	- 单数名词，代词，**动词不定式短语**，**动名词短语**或从句做主语时，谓语动词通常用单数形式；主语为复数时，谓语动词用复数形式
+	
+	- 由连接词and 或 both..and.. 连接起来的主语
+
+	- 主语为单数名词或代词，不受连接词with,together with ,except,like,as well as,rather than,more than,no less than,besides,including 等影响，谓语动词用单数形式;但主语是复数时，谓语动词用复数形式
+
+	- either,neither,each,every 或no+单数名词 和由 some,any,no,every构成的符合不定代词，都看做单数,谓语动词用单数
+
+	- 定语从句中，关系代词that,who,which等做主语时，其谓语动词的数与句中先行词的数一致
+	
+	- 集体名词指的整个集体，则谓语动词用单数;如果指的成员，则谓语动词用复数
+	
+2. 逻辑意义一致原则
+
+	逻辑意义一致就是谓语动词的数必须和主语的意义一致(有时形式为复数，但是意义为单数,反之亦然)
+	
+	- 表示"时间，重量，长度，价值"等名词的复数，谓语动词用单数(因为作主语的名词在概念上是一个整体)
+
+	- 表示 书名，片名，格言，剧名，报名，国名等的复数形式，谓语动词通常用单数形式
+
+	- 学科名词，以-ics结尾，属于形式上的复数名词，作主语时谓语动词用单数
+
+	- trousers,glasses,clothes,shoes 遇到a/the pair of 等量词修饰时，谓语动词常用单数形式
+
+3. 就近一致原则
+
+	英语句子中，有时谓语动词的人称和数与最近的主语保持一致
+	
+	- 当俩个主语由either..or ,neither..nor,whether...or...,not only...but also连接时，谓语动词和邻近的主语一致	
+
+	- there be 句型，be动词单复数取决于其后的主语。如果其后是由and连接的俩个主语，则应与靠近的那个主语保持一致！
+
+
