--- a/english/英语学习笔记.md
+++ b/english/英语学习笔记.md
@@ -25,10 +25,6 @@
 
 [英语可数名词变复数的规则和发音读音规则 ](http://www.sohu.com/a/33781383_108806)
 
-1. 以 s\sh\z\x\ch结尾,词末尾加上后缀-es
-
-2. 以f\fe 结尾，变f\fe 为ves
-
 ## 3. 名词的可数&不可数
 
 不可数:不可以数的，不可以计算的
@@ -409,5 +405,131 @@ a+序数词 表示再一次，相当于again , a seconed  = again
 	- 当俩个主语由either..or ,neither..nor,whether...or...,not only...but also连接时，谓语动词和邻近的主语一致	
 
 	- there be 句型，be动词单复数取决于其后的主语。如果其后是由and连接的俩个主语，则应与靠近的那个主语保持一致！
+
+
+# 冠词（Article）
+
+定义:对名词其泛指,特指,不定量或定量等限定作用的词
+
+作用：在名词之前起修饰限定作用
+
+## 1. 不定冠词 a/an
+
+用来表示这个冠词后面的名词是指某一类特定事物中的一个，但具体是哪一个不重要
+
+- `a`:用于以辅音(指的发音，即音标)开头的单数可数名词
+
+- `an`:用于以原音(指的发音)开头的单数可数名词
+
+### 1.1 用法
+
+1. 第一次提到某人和某物，起介绍作用
+
+2. 表示数量，"一，每一，任意一"
+
+3. 表示类指，泛指一类人或者事物，可用于可数名词前
+
+4. 用于某些表示数量的短语中
+
+	a couple of years , a bunch of flowers
+	
+5. 用于单数名词前，表示身份,职业，尤其用于作表语或补足语的名词之前	
+6. 用于姓氏前，表示不确指的某个人，也可以表示家庭的成员
+
+## 2. 定冠词 the
+
+用于名词前，表示特指，即某个特定的人或者物
+
+### 2.1 用法
+
+1. 用于指前面已经提到过的人或物
+
+2. 用于表示宇宙中独一无二的事物(但是如果存在描述性形容词进行修饰，可以添加不定冠词)
+
+	the sky ,the sun, the equator.the earth
+
+	a lovely moon,a full moon , a red sun
+
+3. 用于谈话双方都知道的人或者事物
+
+3. 用于单数名词前表示属类（属性类别），或者用于某些形容词或分次前，表示”一类人“
+
+	the blind
+	
+4. 用于表示方向，方位，时间的名词前(方位词成对使用并构成平行结构时，不需要使用定冠词)
+
+	at the back,in the east,on the right,in the daytime	
+	they traveled to north and south
+
+5. 用于 序数词，形容词，副词最高级前
+
+	当 last,only,principle,right,same,sole,ultimate,usual,wrong等词修饰名词时,要加定冠词	
+	
+	有些惯用短语中,序数词前可不用定冠词
+	
+	at first sight ,first of all
+
+6. 在乐器前，必须加定冠词
+
+	当乐器指的是实体时，可用不定冠词
+	
+	he bought a piano for his daughter
+	
+	中国传统乐器不与冠词连用，例如 play erhu
+
+7. 用于姓氏复数形式前，表示一家人或一个家庭，有时也指夫妻，或者特定的兄弟和姐妹	
+8. 用于山脉，海洋，江河，湖泊，群岛，海峡等名词前需要+定冠词
+
+	the Pacific Ocean,the Alps,the Thames
+	
+	
+## 3. 零冠词
+指的是名词前不带冠词并且能单独使用的情况
+
+表示抽象概念时复数名词和不可数名词前用零冠词
+
+- 专有名词,季节月份星期,头像等用零冠词
+
+### 4.1 用法
+
+1. 个体名词复数，抽象名词或物质名词用于划分类型时，不使用冠词
+
+2. 人名，地名，季节，月份，星期，节日，三餐，头衔，疾病，语言，学科，颜色，球类，棋类 使用零冠词
+
+3. 形容词最高级前有物主代词，指示代词，名词所有格时，使用零冠词
+
+4. 俩个或多个形容词最高级并列使用时，从第二个开始使用零冠词，但是第一个还是使用的
+
+5. 当形容词最高级用于有 as ,that,though等引导的倒装让步状语从句中时，使用零冠词
+
+6. 形容词最高级作表语，不与一定范围内的事物或者同类事物做比较时，不加定冠词
+
+
+# 5. 补充
+
+在有些表示家具生活,社会事业机构的名词前，有或没有冠词的意义是不一样的
+
+in hospital 住院 ,in the hospital 在医院
+at table 吃饭, at the table 在桌边
+in bed 在睡觉,in the bed 卧在床上
+in school 在读书,in the school 在学校里
+
+
+# 代词
+
+## 人称代词
+
+ |单数|复数
+---|---|---
+主格|I you he she it |we you they
+宾格|me you him her it|us you them
+
+## 主格和宾格
+
+代词作主语那就是主格，作宾语那就是宾格
+
+
+
+
 
 
