Gradle开发相关内容

--- a/AOP/插件化/插件加载机制.md
+++ b/AOP/插件化/插件加载机制.md
@@ -124,7 +124,7 @@ Java类加载过程包括:加载,验证,准备,解析和初始化五个阶段,**
 	
 	- `mPackageInfo`是`LoadedApk`类型,从构造函数中传入(ContextImpl在`ActivityThread.performLaunchActivity().createBaseContextForActivity()`中被创建),可能为空(被`@Nullable`修饰)
 
-	**`LoadedApk`对象是APK文件在内存中的表示.APk文件的相关信息,比如Apk文件的代码和资源,更具体点就是代码里面的Activity,Service等组件的信息.在ActivityThread.H 的 handleMessage(LAUNCH_ACTIVITY)中被创建 **
+	**`LoadedApk`对象是APK文件在内存中的表示.APk文件的相关信息,比如Apk文件的代码和资源,更具体点就是代码里面的Activity,Service等组件的信息.在ActivityThread.H 的 handleMessage(LAUNCH_ACTIVITY)中被创建**
 
 			//LoadedApk
 			Local state maintained about a currently loaded .apk.
@@ -502,6 +502,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 		startActivity(new Intent(MainActivity.this, FakeActivity.class));
 
 2. 需要Hook掉`AMS.startActivity()`的方法, 将`FakeActivity`替换成`MainActivity`(即在替换成在清单文件中注册过的Activity,绕开检查)
+
 		Class acitivtyManagerNativeClass = Class.forName("android.app.ActivityManagerNative");
 		Field gDefaultField = acitivtyManagerNativeClass.getDeclaredField("gDefault");
 		gDefaultField.setAccessible(true);
@@ -853,7 +854,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 	
 		}
 
-	- **从这里可以知道,默认的`mCLassLoader`不为空,它的值是通过`LoadedApk`获取的一个类加载器**
+	- **从这里可以知道,默认的`mClassLoader`不为空,它的值是通过`LoadedApk`获取的一个类加载器**
 
 
 **至此,可以知道`mClassLoader`并不为空,它的值是通过`LoadedApk`获取的.参考 4.2 可以知道 获取到的是`PathClassLoader`**
@@ -1059,7 +1060,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 		pathList_field.setAccessible(true);
 		Object pathList = pathList_field.get(classLoader);
 
-	- **这里需要注意:`pathList`字段是存在于`BaseDexClassLoader`,所以反射需要使用的是`BaseDexClassLoader`的字节码**
+- **这里需要注意:`pathList`字段是存在于`BaseDexClassLoader`,所以反射需要使用的是`BaseDexClassLoader`的字节码**
 
 ## 10.5 获取`Element[]`
 
