--- a/AOP/插件化/插件化.md
+++ b/AOP/插件化/插件化.md
@@ -6,6 +6,8 @@
 
 [Android插件化原理解析——概要](http://weishu.me/2016/01/28/understand-plugin-framework-overview/)
 
+[【Android 修炼手册】常用技术篇 -- Android 插件化解析](https://zhuanlan.zhihu.com/p/72759579)
+
 # 1. 简介
 
 首先需要明确的一点，**插件化和热修复不是同一个概念**，虽然站在技术实现的角度来说，他们都是从系统加载器的角度出发，无论是采用hook方式，亦或是代理方式或者是其他底层实现，都是通过“欺骗”Android 系统的方式来让宿主正常的加载和运行插件（补丁）中的内容；但是二者的出发点是不同的。
@@ -33,3 +35,13 @@
 
 	但是，对于不同的插件资源如何进行管理？是公用资源还是独立资源，公用资源如何避免资源冲突？
 
+3. 生命周期
+
+	如果是一个普通类，那么直接通过`DexClassLoader`加载进来即可执行。但是如果该类是Android中的四大组件，这些类需要和系统进行交互，如何让加载进来的四大组件和系统进行交互就成了问题!
+	
+4. 清单文件
+
+	Android中的四大组件是需要在`AndroidManifest.xml`中进行注册才能正确使用,否则将会被系统服务检测出问题，而插件化的内容并不能被非常灵活的添加（提前声明大量的插件中将使用的组件这种形式过于麻烦），那么如何灵活且简答的实现就成了问题？
+
+
+ 	
